tests/errors/string_use_after_move.milo
// @error: use of moved variable
fn take(s: String): i32 {
    return 0
}

fn main(): i32 {
    let s = "hello"
    take(s)
    take(s)
    return 0
}
